--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </div>
 
         <div class="home-img">
-            <img src="/images/home.png" alt="">
+            <img src="home.png" alt="">
         </div>
     </section>
 
