--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <a href="#"><i class='bx bxl-instagram-alt'></i></a>
                 <a href=https://www.linkedin.com/in/piyush-sharma-078715169><i class='bx bxl-linkedin'></i></a>
             </div>
-            <a href="/images/Piyush Resume (1).pdf" class="btn">Download Resume</a>
+            <a href="Piyush Resume (1).pdf" class="btn">Download Resume</a>
         </div>
 
         <div class="home-img">
@@ -63,7 +63,7 @@
     <!--about section-->
     <section class="about" id="about">
         <div class="about-img">
-            <img src="/images/about.png" alt="">
+            <img src="about.png" alt="">
         </div>
 
         <div class="about-content">
@@ -254,7 +254,7 @@
             <div class="portfolio-gallery">
                 <div class="port-box mix product">
                     <div class="port-img">
-                        <img src="/images/portfolio1.jpg" alt="">
+                        <img src="portfolio1.jpg" alt="">
                     </div>
                     <div class="port-content">
                         <h3>Website Project 1</h3>
@@ -266,7 +266,7 @@
 
             <div class="port-box mix product">
                 <div class="port-img">
-                    <img src="/images/portfolio2.jpg" alt="">
+                    <img src="portfolio2.jpg" alt="">
                 </div>
                 <div class="port-content">
                     <h3>Website Project 2</h3>
@@ -277,7 +277,7 @@
 
             <div class="port-box mix product">
                 <div class="port-img">
-                    <img src="/images/portfolio2.jpg" alt="">
+                    <img src="portfolio2.jpg" alt="">
                 </div>
                 <div class="port-content">
                     <h3>Website Project 3</h3>
@@ -288,7 +288,7 @@
 
             <div class="port-box mix product">
                 <div class="port-img">
-                    <img src="/images/portfolio2.jpg" alt="">
+                    <img src="portfolio2.jpg" alt="">
                 </div>
                 <div class="port-content">
                     <h3>Website Project 4</h3>
@@ -299,7 +299,7 @@
 
             <div class="port-box mix inter">
                 <div class="port-img">
-                    <img src="/images/portfolio2.jpg" alt="">
+                    <img src="portfolio2.jpg" alt="">
                 </div>
                 <div class="port-content">
                     <h3> Application 1</h3>
@@ -310,7 +310,7 @@
 
             <div class="port-box mix inter">
                 <div class="port-img">
-                    <img src="/images/portfolio3.jpg" alt="">
+                    <img src="portfolio3.jpg" alt="">
                 </div>
                 <div class="port-content">
                     <h3>Application 2</h3>
@@ -321,7 +321,7 @@
 
             <div class="port-box mix web">
                 <div class="port-img">
-                    <img src="/images/portfolio2.jpg" alt="">
+                    <img src="portfolio2.jpg" alt="">
                 </div>
                 <div class="port-content">
                     <h3>Social Media Works </h3>
@@ -332,7 +332,7 @@
 
             <div class="port-box mix web">
                 <div class="port-img">
-                    <img src="/images/portfolio2.jpg" alt="">
+                    <img src="portfolio2.jpg" alt="">
                 </div>
                 <div class="port-content">
                     <h3>Brouchers and PPT</h3>
@@ -343,7 +343,7 @@
 
             <div class="port-box mix web">
                 <div class="port-img">
-                    <img src="/images/portfolio2.jpg" alt="">
+                    <img src="portfolio2.jpg" alt="">
                 </div>
                 <div class="port-content">
                     <h3>Logo</h3>
@@ -354,7 +354,7 @@
 
     <div class="port-box mix web">
         <div class="port-img">
-            <img src="/images/portfolio4.jpg" alt="">
+            <img src="portfolio4.jpg" alt="">
         </div>
         <div class="port-content">
             <h3>Gif And Vedios</h3>
@@ -366,7 +366,7 @@
 
 <div class="port-box mix web">
     <div class="port-img">
-        <img src="/images/portfolio5.jpg" alt="">z
+        <img src="portfolio5.jpg" alt="">z
     </div>
     <div class="port-content">
         <h3>Gaming Images</h3>
