--- a/app.html
+++ b/app.html
@@ -11,13 +11,13 @@
     <div class="container">
         <div class="gallery">
            
-            <a href="dispatcher app.pdf"target="_blank" data-lightbox="models" >
+            <a href="/piyush work/app/dispatcher app.pdf"target="_blank" data-lightbox="models" >
                 <img src="logo (13).jpg">
             </a>
-            <a href="india 11 cricket.pdf"target="_blank" data-lightbox="models" >
+            <a href="/piyush work/app/india 11 cricket.pdf"target="_blank" data-lightbox="models" >
                 <img src="logo (14).jpg">
             </a>
-            <a href="mahalaxmi jewellery app screen.pdf"target="_blank" data-lightbox="models" >
+            <a href="/piyush work/app/mahalaxmi jewellery app screen.pdf"target="_blank" data-lightbox="models" >
                 <img src="logo (15).jpg">
             </a>
            
