--- a/broucher.html
+++ b/broucher.html
@@ -11,13 +11,13 @@
     <div class="container">
         <div class="gallery">
            
-            <a href="Bits & Bytes Apr - Jun.pdf"target="_blank" data-lightbox="models" >
+            <a href="/piyush work/Broucher/Bits & Bytes Apr - Jun.pdf"target="_blank" data-lightbox="models" >
                 <img src="logo (13).jpg">
             </a>
-            <a href="broucher quest1.pdf"target="_blank" data-lightbox="models" >
+            <a href="/piyush work/Broucher/broucher quest1.pdf"target="_blank" data-lightbox="models" >
                 <img src="logo (14).jpg">
             </a>
-            <a href="Sales PPT for Sports Betting.pdf"target="_blank" data-lightbox="models" >
+            <a href="/piyush work/Broucher/Sales PPT for Sports Betting.pdf"target="_blank" data-lightbox="models" >
                 <img src="logo (15).jpg">
             </a>
            
