--- a/game.html
+++ b/game.html
@@ -11,13 +11,13 @@
     <div class="container">
         <div class="gallery">
            
-            <a href="/piyush work/gaming image (1).jpeg"target="_blank" data-lightbox="models" >
+            <a href="gaming image (1).jpeg"target="_blank" data-lightbox="models" >
                 <img src="gaming image (1).jpeg">
             </a>
-            <a href="/piyush work/gaming image (2).jpeg"target="_blank" data-lightbox="models" >
+            <a href="gaming image (2).jpeg"target="_blank" data-lightbox="models" >
                 <img src="gaming image (2).jpeg">
             </a>
-            <a href="/piyush work/gaming image (3).jpeg"target="_blank" data-lightbox="models" >
+            <a href="gaming image (3).jpeg"target="_blank" data-lightbox="models" >
                 <img src="gaming image (3).jpeg">
             </a>
            
