--- a/game.html
+++ b/game.html
@@ -5,19 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="logo.css">
     <link rel="stylesheet" href="/logo work/lightbox.css">
-    <title>LOGO Page</title>
+    <title>Game Page</title>
 </head>
 <body>
     <div class="container">
         <div class="gallery">
            
-            <a href="gaming image (1).jpeg"target="_blank" data-lightbox="models" >
+            <a href="/piyush work/gaming image (1).jpeg"target="_blank" data-lightbox="models" >
                 <img src="gaming image (1).jpeg">
             </a>
-            <a href="gaming image (2).jpeg"target="_blank" data-lightbox="models" >
+            <a href="/piyush work/gaming image (2).jpeg"target="_blank" data-lightbox="models" >
                 <img src="gaming image (2).jpeg">
             </a>
-            <a href="gaming image (3).jpeg"target="_blank" data-lightbox="models" >
+            <a href="/piyush work/gaming image (3).jpeg"target="_blank" data-lightbox="models" >
                 <img src="gaming image (3).jpeg">
             </a>
            
