--- a/game.html
+++ b/game.html
@@ -26,6 +26,6 @@
 
         </div>
     </div>
-    <script src="/logo work/lightbox-plus-jquery.js"></script>
+    <script src="lightbox-plus-jquery.js"></script>
 </body>
 </html>
