--- a/socialpost.html
+++ b/socialpost.html
@@ -11,35 +11,35 @@
     <div class="container">
         <div class="gallery">
            
-            <a href="/piyush work/socialm/Banners.pdf"target="_blank" data-lightbox="models" >
-                <img src="/images/logo (13).jpg">
+            <a href="Banners.pdf"target="_blank" data-lightbox="models" >
+                <img src="logo (13).jpg">
             </a>
-            <a href="/piyush work/socialm/cricket banner.pdf"target="_blank" data-lightbox="models" >
-                <img src="/images/logo (14).jpg">
+            <a href="cricket banner.pdf"target="_blank" data-lightbox="models" >
+                <img src="logo (14).jpg">
             </a>
-            <a href="/piyush work/socialm/DASTAK PAGE SCREEN.pdf"target="_blank" data-lightbox="models" >
-                <img src="/images/logo (15).jpg">
+            <a href="DASTAK PAGE SCREEN.pdf"target="_blank" data-lightbox="models" >
+                <img src="logo (15).jpg">
             </a>
-            <a href="/piyush work/socialm/FMS 2.pdf"target="_blank" data-lightbox="models" >
-                <img src="/images/logo (16).jpg">
+            <a href="FMS 2.pdf"target="_blank" data-lightbox="models" >
+                <img src="logo (16).jpg">
             </a>
-            <a href="/piyush work/socialm/FMS.pdf"target="_blank" data-lightbox="models" >
-                <img src="/images/logo (17).jpg">
+            <a href="FMS.pdf"target="_blank" data-lightbox="models" >
+                <img src="logo (17).jpg">
             </a>
-            <a href="/piyush work/socialm/HIRUN 2.pdf"target="_blank" data-lightbox="models" >
-                <img src="/images/logo (18).jpg">
+            <a href="HIRUN 2.pdf"target="_blank" data-lightbox="models" >
+                <img src="logo (18).jpg">
             </a>
-            <a href="/piyush work/socialm/HIRUN 3.pdf"target="_blank" data-lightbox="models" >
-                <img src="/images/logo (19).jpg">
+            <a href="HIRUN 3.pdf"target="_blank" data-lightbox="models" >
+                <img src="logo (19).jpg">
             </a>
-            <a href="/piyush work/socialm/MONTY FINANCE.pdf"target="_blank" data-lightbox="models" >
-                <img src="/images/logo (20).jpg">
+            <a href="MONTY FINANCE.pdf"target="_blank" data-lightbox="models" >
+                <img src="logo (20).jpg">
             </a>
-            <a href="/piyush work/socialm/Posts.pdf"target="_blank" data-lightbox="models" >
-                <img src="/images/logo (21).jpg">
+            <a href="Posts.pdf"target="_blank" data-lightbox="models" >
+                <img src="logo (21).jpg">
             </a>
-            <a href="/piyush work/socialm/TEQNOVOS.pdf"target="_blank" data-lightbox="models" >
-                <img src="/images/logo (22).jpg">
+            <a href="TEQNOVOS.pdf"target="_blank" data-lightbox="models" >
+                <img src="logo (22).jpg">
             </a>
 
           
