--- a/gif.html
+++ b/gif.html
@@ -4,47 +4,47 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="logo.css">
-    <link rel="stylesheet" href="/logo work/lightbox.css">
+    <link rel="stylesheet" href="lightbox.css">
     <title>LOGO Page</title>
 </head>
 <body>
     <div class="container">
         <div class="gallery">
            
-            <a href="/piyush work/Video _ Gif/Betpawa Crash.mp4"target="_blank" data-lightbox="models" >
-                <img src="/images/logo (13).jpg">
+            <a href="Video _ Gif/Betpawa Crash.mp4"target="_blank" data-lightbox="models" >
+                <img src="logo (13).jpg">
             </a>
             
-            <a href="/piyush work/Video _ Gif/Earth Day.mp4"target="_blank" data-lightbox="models" >
-                <img src="/images/logo (15).jpg">
+            <a href="Video _ Gif/Earth Day.mp4"target="_blank" data-lightbox="models" >
+                <img src="logo (15).jpg">
             </a>
-            <a href="/piyush work/Video _ Gif/gif fathers day.gif"target="_blank" data-lightbox="models" >
-                <img src="/images/logo (16).jpg">
+            <a href="Video _ Gif/gif fathers day.gif"target="_blank" data-lightbox="models" >
+                <img src="logo (16).jpg">
             </a>
-            <a href="/piyush work/Video _ Gif/Holi Gif.mp4"target="_blank" data-lightbox="models" >
-                <img src="/images/logo (17).jpg">
+            <a href="Video _ Gif/Holi Gif.mp4"target="_blank" data-lightbox="models" >
+                <img src="logo (17).jpg">
             </a>
-            <a href="/piyush work/Video _ Gif/Kargil Diwas.mp4"target="_blank" data-lightbox="models" >
-                <img src="/images/logo (18).jpg">
+            <a href="Video _ Gif/Kargil Diwas.mp4"target="_blank" data-lightbox="models" >
+                <img src="logo (18).jpg">
             </a>
-            <a href="/piyush work/Video _ Gif/Mahashivratri Gif.gif"target="_blank" data-lightbox="models" >
-                <img src="/images/logo (19).jpg">
+            <a href="Video _ Gif/Mahashivratri Gif.gif"target="_blank" data-lightbox="models" >
+                <img src="logo (19).jpg">
             </a>
-            <a href="/piyush work/Video _ Gif/Makar Sankranti Video.gif"target="_blank" data-lightbox="models" >
-                <img src="/images/logo (20).jpg">
+            <a href="Video _ Gif/Makar Sankranti Video.gif"target="_blank" data-lightbox="models" >
+                <img src="logo (20).jpg">
             </a>
-            <a href="/piyush work/Video _ Gif/Mothers Day.mp4"target="_blank" data-lightbox="models" >
-                <img src="/images/logo (21).jpg">
+            <a href="Video _ Gif/Mothers Day.mp4"target="_blank" data-lightbox="models" >
+                <img src="logo (21).jpg">
             </a>
-            <a href="/piyush work/Video _ Gif/New Year Gammastack gif1.mp4"target="_blank" data-lightbox="models" >
-                <img src="/images/logo (22).jpg">
+            <a href="Video _ Gif/New Year Gammastack gif1.mp4"target="_blank" data-lightbox="models" >
+                <img src="logo (22).jpg">
             </a>
-            <a href="/piyush work/Video _ Gif/Republic Day.1.mp4"target="_blank" data-lightbox="models" >
-                <img src="/images/logo (23).jpg">
+            <a href="Video _ Gif/Republic Day.1.mp4"target="_blank" data-lightbox="models" >
+                <img src="logo (23).jpg">
             </a>
 
-            <a href="/piyush work/Video _ Gif/ship.mp4"target="_blank" data-lightbox="models" >
-                <img src="/images/logo (24).jpg">
+            <a href="Video _ Gif/ship.mp4"target="_blank" data-lightbox="models" >
+                <img src="logo (24).jpg">
             </a>
 
 
