--- a/game.html
+++ b/game.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="logo.css">
-    <link rel="stylesheet" href="/logo work/lightbox.css">
+    <link rel="stylesheet" href="lightbox.css">
     <title>Game Page</title>
 </head>
 <body>
