--- a/app.html
+++ b/app.html
@@ -14,7 +14,7 @@
             <a href="dispatcher app.pdf"target="_blank" data-lightbox="models" >
                 <img src="logo (13).jpg">
             </a>
-            <a href="app/india 11 cricket.pdf"target="_blank" data-lightbox="models" >
+            <a href="india 11 cricket.pdf"target="_blank" data-lightbox="models" >
                 <img src="logo (14).jpg">
             </a>
             <a href="mahalaxmi jewellery app screen.pdf"target="_blank" data-lightbox="models" >
