--- a/broucher.html
+++ b/broucher.html
@@ -11,10 +11,10 @@
     <div class="container">
         <div class="gallery">
            
-            <a href="Bits & Bytes Apr - Jun.pdf"target="_blank" data-lightbox="models" >
+            <a href="Bits & Bytes Apr - Jun (3).pdf"target="_blank" data-lightbox="models" >
                 <img src="logo (13).jpg">
             </a>
-            <a href="broucher quest1.pdf"target="_blank" data-lightbox="models" >
+            <a href="broucher quest1 (2).pdf"target="_blank" data-lightbox="models" >
                 <img src="logo (14).jpg">
             </a>
             <a href="Sales PPT for Sports Betting.pdf"target="_blank" data-lightbox="models" >
