--- a/gif.html
+++ b/gif.html
@@ -11,39 +11,39 @@
     <div class="container">
         <div class="gallery">
            
-            <a href="Video _ Gif/Betpawa Crash.mp4"target="_blank" data-lightbox="models" >
+            <a href="Betpawa Crash.mp4"target="_blank" data-lightbox="models" >
                 <img src="logo (13).jpg">
             </a>
             
-            <a href="Video _ Gif/Earth Day.mp4"target="_blank" data-lightbox="models" >
+            <a href="Earth Day.mp4"target="_blank" data-lightbox="models" >
                 <img src="logo (15).jpg">
             </a>
-            <a href="Video _ Gif/gif fathers day.gif"target="_blank" data-lightbox="models" >
+            <a href="gif fathers day.gif"target="_blank" data-lightbox="models" >
                 <img src="logo (16).jpg">
             </a>
-            <a href="Video _ Gif/Holi Gif.mp4"target="_blank" data-lightbox="models" >
+            <a href="Holi Gif.mp4"target="_blank" data-lightbox="models" >
                 <img src="logo (17).jpg">
             </a>
-            <a href="Video _ Gif/Kargil Diwas.mp4"target="_blank" data-lightbox="models" >
+            <a href="Kargil Diwas.mp4"target="_blank" data-lightbox="models" >
                 <img src="logo (18).jpg">
             </a>
-            <a href="Video _ Gif/Mahashivratri Gif.gif"target="_blank" data-lightbox="models" >
+            <a href="Mahashivratri Gif.gif"target="_blank" data-lightbox="models" >
                 <img src="logo (19).jpg">
             </a>
-            <a href="Video _ Gif/Makar Sankranti Video.gif"target="_blank" data-lightbox="models" >
+            <a href="Makar Sankranti Video.gif"target="_blank" data-lightbox="models" >
                 <img src="logo (20).jpg">
             </a>
-            <a href="Video _ Gif/Mothers Day.mp4"target="_blank" data-lightbox="models" >
+            <a href="Mothers Day.mp4"target="_blank" data-lightbox="models" >
                 <img src="logo (21).jpg">
             </a>
-            <a href="Video _ Gif/New Year Gammastack gif1.mp4"target="_blank" data-lightbox="models" >
+            <a href="New Year Gammastack gif1.mp4"target="_blank" data-lightbox="models" >
                 <img src="logo (22).jpg">
             </a>
-            <a href="Video _ Gif/Republic Day.1.mp4"target="_blank" data-lightbox="models" >
+            <a href="Republic Day.1.mp4"target="_blank" data-lightbox="models" >
                 <img src="logo (23).jpg">
             </a>
 
-            <a href="Video _ Gif/ship.mp4"target="_blank" data-lightbox="models" >
+            <a href="ship.mp4"target="_blank" data-lightbox="models" >
                 <img src="logo (24).jpg">
             </a>
 
