--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
                     <div class="port-content">
                         <h3>Website Project 1</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus itaque cum mollitia similique, cupiditate saepe numquam exercitationem.. </p>
-                        <a href="https://www.figma.com/proto/aLd2uJ3YZJVQ8hZ9mLZoft/Jungle-Theme?page-id=0%3A1&type=design"><i class='bx bx-link-external'></i></a>
+                        <a href="https://www.figma.com/proto/aLd2uJ3YZJVQ8hZ9mLZoft/Jungle-Theme?page-id=0%3A1&type=design"target="_blank"><i class='bx bx-link-external'></i></a>
                     </div>
                 </div>
             
@@ -271,7 +271,7 @@
                 <div class="port-content">
                     <h3>Website Project 2</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus itaque cum mollitia similique, cupiditate saepe numquam exercitationem.. </p>
-                    <a href="https://www.figma.com/proto/I9PuQAK6GSdnE4ksHgPcSp/PSports?node-id=553-3681&scaling=contain"><i class='bx bx-link-external'></i></a>
+                    <a href="https://www.figma.com/proto/I9PuQAK6GSdnE4ksHgPcSp/PSports?node-id=553-3681&scaling=contain"target="_blank"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
 
@@ -282,7 +282,7 @@
                 <div class="port-content">
                     <h3>Website Project 3</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus itaque cum mollitia similique, cupiditate saepe numquam exercitationem.. </p>
-                    <a href="https://www.figma.com/proto/Y5C7bFjjUkBcY86N5RUNj6/Sports-Bet-2?node-id=1-2337&scaling=contain"><i class='bx bx-link-external'></i></a>
+                    <a href="https://www.figma.com/proto/Y5C7bFjjUkBcY86N5RUNj6/Sports-Bet-2?node-id=1-2337&scaling=contain"target="_blank"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
 
