--- a/gif.html
+++ b/gif.html
@@ -24,10 +24,10 @@
             <a href="Holi Gif.mp4"target="_blank" data-lightbox="models" >
                 <img src="logo (17).jpg">
             </a>
-            <a href="Kargil Diwas(1).mp4"target="_blank" data-lightbox="models" >
+            <a href="Kargil Diwas (1).mp4"target="_blank" data-lightbox="models" >
                 <img src="logo (18).jpg">
             </a>
-            <a href="Mahashivratri Gif.gif"target="_blank" data-lightbox="models" >
+            <a href="Mahashivratri Gif.mp4"target="_blank" data-lightbox="models" >
                 <img src="logo (19).jpg">
             </a>
             <a href="Makar Sankranti Video.gif"target="_blank" data-lightbox="models" >
