--- a/socialpost.html
+++ b/socialpost.html
@@ -12,34 +12,34 @@
         <div class="gallery">
            
             <a href="Banners.pdf"target="_blank" data-lightbox="models" >
-                <img src="logo (13).jpg">
+                <img src="f2 (5).jpeg">
             </a>
             <a href="cricket banner.pdf"target="_blank" data-lightbox="models" >
-                <img src="logo (14).jpg">
+                <img src="f2 (5).jpeg">
             </a>
             <a href="DASTAK PAGE SCREEN.pdf"target="_blank" data-lightbox="models" >
-                <img src="logo (15).jpg">
+                <img src="f2 (5).jpeg">
             </a>
             <a href="FMS 2.pdf"target="_blank" data-lightbox="models" >
-                <img src="logo (16).jpg">
+                <img src="f2 (4).jpeg">
             </a>
             <a href="FMS.pdf"target="_blank" data-lightbox="models" >
-                <img src="logo (17).jpg">
+                <img src="f2 (4).jpeg">
             </a>
             <a href="HIRUN 2.pdf"target="_blank" data-lightbox="models" >
-                <img src="logo (18).jpg">
+                <img src="f2 (4).jpeg">
             </a>
             <a href="HIRUN 3.pdf"target="_blank" data-lightbox="models" >
-                <img src="logo (19).jpg">
+                <img src="f2 (4).jpeg">
             </a>
             <a href="MONTY FINANCE.pdf"target="_blank" data-lightbox="models" >
-                <img src="logo (20).jpg">
+                <img src="f2 (4).jpeg">
             </a>
             <a href="Posts.pdf"target="_blank" data-lightbox="models" >
-                <img src="logo (21).jpg">
+                <img src="f2 (4).jpeg">
             </a>
             <a href="TEQNOVOS.pdf"target="_blank" data-lightbox="models" >
-                <img src="logo (22).jpg">
+                <img src="f2 (4).jpeg">
             </a>
 
           
