--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
             <img src="portfolio4.jpg" alt="">
         </div>
         <div class="port-content">
-            <h3>Gif And Vedios</h3>
+            <h3>Gif And Videos</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus itaque cum mollitia similique, cupiditate saepe numquam exercitationem.. </p>
             <a href="gif.html"target="_blank"><i class='bx bx-link-external'></i></a>
         </div>
