--- a/gif.html
+++ b/gif.html
@@ -12,39 +12,39 @@
         <div class="gallery">
            
             <a href="Betpawa Crash.mp4"target="_blank" data-lightbox="models" >
-                <img src="logo (13).jpg">
+                <img src="f2 (2).jpeg">
             </a>
             
             <a href="Earth Day.mp4"target="_blank" data-lightbox="models" >
-                <img src="logo (15).jpg">
+                <img src="f2 (8).jpeg">
             </a>
             <a href="gif fathers day.gif"target="_blank" data-lightbox="models" >
-                <img src="logo (16).jpg">
+                <img src="f2 (7)).jpeg">
             </a>
             <a href="Holi Gif.mp4"target="_blank" data-lightbox="models" >
-                <img src="logo (17).jpg">
+                <img src="f2 (8).jpeg">
             </a>
             <a href="Kargil Diwas (1).mp4"target="_blank" data-lightbox="models" >
-                <img src="logo (18).jpg">
+                <img src="f2 (8).jpeg">
             </a>
             <a href="Mahashivratri Gif.mp4"target="_blank" data-lightbox="models" >
-                <img src="logo (19).jpg">
+                <img src="f2 (8).jpeg">
             </a>
             <a href="Makar Sankranti Video.gif"target="_blank" data-lightbox="models" >
-                <img src="logo (20).jpg">
+                <img src="f2 (7)).jpeg">
             </a>
             <a href="Mothers Day.mp4"target="_blank" data-lightbox="models" >
-                <img src="logo (21).jpg">
+                <img src="f2 (8).jpeg">
             </a>
             <a href="New Year Gammastack gif1.mp4"target="_blank" data-lightbox="models" >
-                <img src="logo (22).jpg">
+                <img src="f2 (8).jpeg">
             </a>
             <a href="Republic Day.1.mp4"target="_blank" data-lightbox="models" >
-                <img src="logo (23).jpg">
+                <img src="f2 (8).jpeg">
             </a>
 
             <a href="ship.mp4"target="_blank" data-lightbox="models" >
-                <img src="logo (24).jpg">
+                <img src="f2 (2).jpeg">
             </a>
 
 
