--- a/gif.html
+++ b/gif.html
@@ -19,7 +19,7 @@
                 <img src="f2 (8).jpeg">
             </a>
             <a href="gif fathers day.gif"target="_blank" data-lightbox="models" >
-                <img src="f2 (7)).jpeg">
+                <img src="f2 (7).jpeg">
             </a>
             <a href="Holi Gif.mp4"target="_blank" data-lightbox="models" >
                 <img src="f2 (8).jpeg">
@@ -31,7 +31,7 @@
                 <img src="f2 (8).jpeg">
             </a>
             <a href="Makar Sankranti Video.gif"target="_blank" data-lightbox="models" >
-                <img src="f2 (7)).jpeg">
+                <img src="f2 (7).jpeg">
             </a>
             <a href="Mothers Day.mp4"target="_blank" data-lightbox="models" >
                 <img src="f2 (8).jpeg">
