--- a/index.html
+++ b/index.html
@@ -38,7 +38,14 @@
         <div class="home-content scroll-scale">
             <h3>Hello,It's Me</h3>
             <h1>Piyush Sharma</h1>
-            <h3>And I'm a <span>Graphic Designer</span></h3>
+           <div class="change-text">
+                <h3>And I'm a </h3>
+                <h3>
+                    <span class="word">Graphic&nbsp; Designer</span>
+                    <span class="word">UX&nbsp; Designer</span>
+                    <span class="word">Vedio&nbsp; Editor</span>
+                </h3>
+            </div>
             <p>Experienced Graphic, UX, and Motion Designer with over 3 years of proven expertise in creating visually stunning and user-centric designs. Proficient in translating complex concepts into captivating visuals, enhancing user experiences through intuitive interfaces, and bringing designs to life with dynamic motion graphics. Adept at collaborating with cross-functional teams and clients to deliver impactful design solutions. Passionate about staying up-to-date with design trends and technologies to consistently produce innovative and engaging designs.
             </p>
             <div class="social-media">
@@ -51,14 +58,14 @@
         </div>
 
         <div class="home-img scroll-scale">
-            <img src="home.png" alt="">
+            <img src="Piyush-img2.png" alt="">
         </div>
     </section>
 
     <!--about section-->
     <section class="about" id="about">
         <div class="about-img scroll-scale">
-            <img src="about.png" alt="">
+            <img src="Piyush-img.png" alt="">
         </div>
 
         <div class="about-content scroll-scale">
