--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
 
      <!--footer section design-->
      <footer>
-        <p class="scroll-Bottom">Copyright &copy; 2023 by Piyush Sharma || All Right Reserved</p>
+        <p class="scroll-scale">Copyright &copy; 2023 by Piyush Sharma || All Right Reserved</p>
         <a href="#home"> <i class='bx bx-up-arrow-alt'></i></a>
      </footer>
     <script src="mixitup.min.js"></script>
