--- a/app.html
+++ b/app.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="logo.css">
     <link rel="stylesheet" href="lightbox.css">
-    <title>LOGO Page</title>
+    <title>Application 2</title>
 </head>
 <body>
     <div class="container">
