--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
      <!--service section-->
     <section class="services" id="services">
-        <h2 class="heading">Our <span>Services</span></h2>
+        <h2 class="heading">My <span>Services</span></h2>
 
         <div class="services-container scroll-Bottom">
             <div class="services-box">
