--- a/index.html
+++ b/index.html
@@ -86,9 +86,9 @@
 
         <div class="services-container scroll-Bottom">
              <div class="services-box">
-                <i class="bx bxs-paint"></i>
-                <h3>Graphic Designer</h3>
-                <p>Creative and experienced graphic designer with 3+ years of experience in the tech industry. Proven ability to create visually appealing and engaging designs for a variety of platforms, including print, web, and mobile. Expertise in a variety of design software, including Adobe Photoshop, Illustrator, and InDesign. Strong communication and collaboration skills.</p>
+                <i class="bx bx-code-alt"></i>
+                <h3>UX Designer</h3>
+                <p>UX Designer with 3+ years of experience in the IT industry. Proven ability to conduct user research, create wireframes, design user interfaces, prototype, and conduct usability testing. Expertise in a variety of design tools, including Figma and Adobe XD. Strong communication and collaboration skills.</p>
                
             </div>
 
