--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
         <div class="services-container scroll-Bottom">
              <div class="services-box">
-                <i class="bx bxs-paint"></i>
+                <i class="bx bx-code-alt"></i>
                 <h3>UX Designer</h3>
                 <p>UX Designer with 3+ years of experience in the IT industry. Proven ability to conduct user research, create wireframes, design user interfaces, prototype, and conduct usability testing. Expertise in a variety of design tools, including Figma and Adobe XD. Strong communication and collaboration skills and InDesign. Strong communication and collaboration skills.</p>
                
