--- a/index.html
+++ b/index.html
@@ -524,7 +524,7 @@ let section = document.querySelectorAll('section');
     function sendEmail(){
         Email.send({
             Host : "smtp.gmail.com",
-            Username : "venkteshsha11@gmail.com",
+            Username : "venkteshsharma11@gmail.com",
             Password : "Venktesh1234@",
             To : 'venkteshsharma11@gmail.com',
             From : document.getElementById("email").value,,
