--- a/index.html
+++ b/index.html
@@ -524,8 +524,8 @@ let section = document.querySelectorAll('section');
     function sendEmail(){
         Email.send({
             Host : "smtp.gmail.com",
-            Username : "venkteshsharma11@gmail.com",
-            Password : "Venktesh1234@",
+            Username : "venkteshsha11@gmail.com",
+            Password : "venktesh1234@",
             To : 'venkteshsharma11@gmail.com',
             From : document.getElementById("email").value,,
             Subject : "New contact Enquiry",
