--- a/index.html
+++ b/index.html
@@ -519,14 +519,14 @@ let section = document.querySelectorAll('section');
     scrollTop.forEach((el)=>observer.observe(el));
      
          </script>
-         <script src="https://smtpjs.com/v3/smtp.js"></script>
+    <script src="https://smtpjs.com/v3/smtp.js"></script>
     <script>
     function sendEmail(){
         Email.send({
             Host : "smtp.gmail.com",
             Username : "venkteshsha11@gmail.com",
             Password : "venktesh1234@",
-            To : 'venkteshsharma11@gmail.com',
+            To : 'venkteshsha11@gmail.com',
             From : document.getElementById("email").value,,
             Subject : "New contact Enquiry",
             Body : "And this is the body"
