--- a/index.html
+++ b/index.html
@@ -522,17 +522,17 @@ let section = document.querySelectorAll('section');
     <script src="https://smtpjs.com/v3/smtp.js"></script>
     <script>
     function sendEmail(){
-       Email.send({
-    Host : "smtp.elasticemail.com",
-    Username : "username",
-    Password : "password",
-    To : 'them@website.com',
-    From : "you@isp.com",
-    Subject : "This is the subject",
-    Body : "And this is the body"
-}).then(
-  message => alert(message)
-);
+      Email.send({
+            Host : "smtp.gmail.com",
+            Username : "venkteshsha11@gmail.com",
+            Password : "venktesh1234@",
+            To : 'venkteshsharma11@gmail.com',
+            From : document.getElementById("email").value,
+            Subject : "This is the subject",
+            Body : "And this is the body"
+        }).then(
+          message => alert(message)
+        );
     }
      </script>
 
