--- a/index.html
+++ b/index.html
@@ -525,7 +525,7 @@ let section = document.querySelectorAll('section');
       Email.send({
             Host : "smtp.gmail.com",
             Username : "venkteshsha11@gmail.com",
-            Password : "venktesh1234@",
+            Password : "Venktesh1234@",
             To : 'venkteshsharma11@gmail.com',
             From : document.getElementById("email").value,
             Subject : "This is the subject",
