--- a/index.html
+++ b/index.html
@@ -392,7 +392,10 @@
             <h2>Contact Me</h2>
         </div>
 
-       <form onsubmit="sendEmail(); reset(); return false;" class="scroll-Bottom">
+     <form
+  action="https://formspree.io/f/xbjvgpdy"
+  method="POST"  class="scroll-Bottom"
+> 
             <input type="text" id="name" placeholder="Your Name">
             <input type="email" id="email" placeholder="Your Email">
             <input type="text" id="address" placeholder="Your Address">
