--- a/index.html
+++ b/index.html
@@ -396,11 +396,11 @@
   action="https://formspree.io/f/xbjvgpdy"
   method="POST"  class="scroll-Bottom"
 > 
-            <input type="text" id="name" placeholder="Your Name">
-            <input type="email" id="email" placeholder="Your Email">
-            <input type="text" id="address" placeholder="Your Address">
-            <input type="number" id="number" placeholder="Your Number">
-            <textarea name="" id="message" cols="30" rows="10" placeholder="Your Messages"></textarea>
+            <input type="text" name="name" placeholder="Your Name">
+            <input type="email"name="email" placeholder="Your Email">
+            <input type="text" name="address" placeholder="Your Address">
+            <input type="number" name="number" placeholder="Your Number">
+            <textarea name="message" cols="30" rows="10" placeholder="Your Messages"></textarea>
 
             <div class="btn-box form-btn">
                 <button type="submit" class="btn">Send Message</button>
