--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </div>
 
         <div class="home-img scroll-scale">
-            <img src="Piyush-img2.png" alt="">
+            <img src="Piyush-img2.png"target="_blank" alt="">
         </div>
     </section>
 
