--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
                 <a href="#"><i class='bx bxl-instagram-alt'></i></a>
                 <a href=https://www.linkedin.com/in/piyush-sharma-078715169><i class='bx bxl-linkedin'></i></a>
             </div>
-            <a href="Piyush Resume 2.pdf" class="btn">Download Resume</a>
+            <a href="Piyush Resume 2.pdf"target="_blank"  class="btn">Download Resume</a>
         </div>
 
         <div class="home-img scroll-scale">
-            <img src="Piyush-img2.png"target="_blank" alt="">
+            <img src="Piyush-img2.png"alt="">
         </div>
     </section>
 
