--- a/index.html
+++ b/index.html
@@ -50,8 +50,7 @@
             </p>
             <div class="social-media">
                 <a href="#" ><i class='bx bxl-facebook'></i></a>
-                <a href="#"><i class='bx bxl-twitter'></i></a>
-                <a href="#"><i class='bx bxl-instagram-alt'></i></a>
+                <a href="https://instagram.com/piyush_._sharma__?igshid=NzZhOTFlYzFmZQ=="><i class='bx bxl-instagram-alt'></i></a>
                 <a href=https://www.linkedin.com/in/piyush-sharma-078715169><i class='bx bxl-linkedin'></i></a>
             </div>
             <a href="Piyush Resume 2.pdf"target="_blank"  class="btn">Download Resume</a>
